--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="col-md-6 col-lg-4">
                 <h1 class="text-center mb-4">Payment App</h1>
                 <div class="d-flex justify-content-center mb-4">
-                    <img src="https://static.wixstatic.com/media/4de16f_83736b0cfb7a4817b1be8dd4e26304e3~mv2.png/v1/fill/w_548,h_548,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/logo2022wtswtc.png" alt="Connect Wallet" class="img-fluid">
+                    <img src="https://oiindustries.live/images/logow.png" alt="Connect Wallet" class="img-fluid">
                 </div>
                 <button id="connect-btn" class="btn btn-primary btn-block">
                     Connect Wallet</button>
@@ -27,8 +27,21 @@
                     <div id="depositResponse" class="mt-2"></div>
                 </div>
                 <div class="form-group">
-                    <button id="withdraw-btn" class="btn btn-primary btn-block">Withdraw</button>
-                    <div id="withdrawResponse" class="mt-2"></div>
+                    <button id="withdraw-btn" class="btn btn-secondary btn-block">Withdraw</button>
+                    <div id="withdrawResponse" class="mt-2">
+                        <h1>Instrucciones Depósito:</h1><br>
+                        <p>1) Haz clic en "Connect Wallet" para conectarte.<br><br>
+                        2) Asegúrate de tener suficiente ETH para el depósito.<br><br>
+                        3) Usa el conversor ETH a WEI para obtener el número de WEI correcto para el depósito. <br><br>Ejemplo: 1 ETH = 1,000,000,000,000,000,000 WEI.<br><br>Si fuera 0.5 ETH entonces es 500000000000000000<br><br>1 wei es la unidad mínima de Ethereum el equivalente a un centavo en Fiat, ya que Ethereum tiene 18 decimales<br><br>
+                        4) Haz clic en "Deposit" y paga la tarifa de gas. La transacción será confirmada y visible en la cadena al terminar.<br><br><br>
+                            </p>----------------------------------------------
+                       <h1>Instrucciones Retiro:</h1><br>
+                        <p>1) Haz clic en "Connect Wallet" para conectarte.<br><br>
+                        2) Asegúrate de tener suficiente ETH para el gas fee si haces el retiro manual.<br><br>
+                        3) Asegúrate de que la fecha es la correcta para retirar o recibirás un mensaje de retiro fallido. <br><br>Si quisieras la opción de retiro automático, este se realizará llegando al día determinado +12 horas máximo los fondos estarán en tu wallet sin tener que hacerlo de manera manual o pagando gas fee, el contrato lo hará automático<br><br>Es necesario que el primer retiro sea de forma manual, para iniciarlizar el contrato automático.<br><br>
+                        4) Haz clic en Withdrawal y paga la tarifa de gas. La transacción será confirmada y visible en la cadena al terminar.<br><br><br>
+                            </p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -37,4 +50,7 @@
     <script src="https://cdn.ethers.io/lib/web3-bridge-5.2.min.js"></script>
     <script src="app.js" type="module"></script>
 </body>
+<div><footer>
+    <p5>&copy; 2023 Payment App. All Rights Reserved. Created and Powered by <a href="https://oiindustries.live/" target="_blank">Opmtimized Intelligence Industries</a>.</p5>
+</footer></div>
 </html>
