--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
                     <img src="https://media.giphy.com/media/67ThRZlYBvibtdF9JH/giphy.gif" alt="Connect Wallet" class="img-fluid">
                 </div>
                 <div class="d-flex justify-content-center mb-4">
-                    <a href="https://oiindustries.live" target="_blank">
-                        <img src="https://oiindustries.live/images/logow.png" alt="Connect Wallet" class="img-fluid" style="max-width: 100px;">
-                      </a>
+                    <img src="https://static.wixstatic.com/media/4de16f_83736b0cfb7a4817b1be8dd4e26304e3~mv2.png" alt="Connect Wallet" class="img-fluid" style="max-width: 200;">
                 </div>
                 <button id="connect-btn" class="btn btn-primary btn-block">
                     Connect Wallet</button>
@@ -77,6 +75,11 @@
                         3) Asegúrate de que la fecha es la correcta para retirar o recibirás un mensaje de retiro fallido. <br><br>Si quisieras la opción de retiro automático, este se realizará llegando al día determinado +12 horas máximo los fondos estarán en tu wallet sin tener que hacerlo de manera manual o pagando gas fee, el contrato lo hará automático<br><br>Es necesario que el primer retiro sea de forma manual, para iniciarlizar el contrato automático.<br><br>
                         4) Haz clic en Withdrawal y paga la tarifa de gas. La transacción será confirmada y visible en la cadena al terminar.<br><br><br>
                             </p>
+                            <div class="d-flex justify-content-center mb-4">
+                                <a href="https://oiindustries.live" target="_blank">
+                                    <img src="https://oiindustries.live/images/logow.png" alt="Connect Wallet" class="img-fluid" style="max-width: 100px;">
+                                  </a>
+                            </div>
                     </div>
                 </div>
             </div>
